--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <nav>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="pages/rekt.html">Git -f dunked</a></li>
+                <li><a href="pages/karlstads_birthday.html">Karlstads Födelsedag</a></li>
                 <li class="burn">Dret asså, dä ä så möe snö och torver i kallista. Jä kunn int fästå varfö dä inte gött vär. Dä ä göööörglint ute, jä komme drämme huvve blått. träligt…</li>
             </nav>
         </header>
