--- a/pages/karlstads_birthday.html
+++ b/pages/karlstads_birthday.html
@@ -11,21 +11,33 @@
             background-image: url("../images/bg-karlstad.jpg");
             font-family: Arial, Helvetica, sans-serif;
             text-align: center;
-            font-size: 5vh;
+            font-size: 2.5vw;
             text-shadow: 1px 1px 1px white;
-            
+ 
         }
         .countdown{
-            font-size: 10vh;
+            font-size: 8vw;
             display: flex;
             justify-content: center;
         }
         .countdown .container{
             margin: 0.5em;
-            margin-top: 1.5em;
+            margin-top: 1em;
         }
         .countdown span{
-            font-size: 5vh;
+            font-size: 5vw;
+        }
+        @media screen and (max-width: 600px) {
+            h1{
+                font-size: 30px;
+            }
+            .countdown{
+                font-size: 50px;
+            }
+            .countdown .container{
+            margin: 5px;
+            margin-top: 1.5em;
+            }
         }
     </style>
 </head>
